# SF-311-Data-Annotation-Tool

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  homeless.txt  main.py  package-lock.json  parse_txt.py  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: data-refresh.yml  export-labels.yml
.streamlit/: secrets.example.toml
config/: annotators.example.json
data/: README.md  transformed.csv  transformed.jsonl  transformed.parquet
data/fixtures/: README.md
docs/: deployment.md  labeler_improvement_plan.md
scripts/: __init__.py  export_labels.py  fetch_images.py  goa_eda.py  goa_features.py  goa_labels.py  goa_photo_analysis.py  goa_prepare.py  goa_report.py  goa_resolution_analysis.py  goa_trends.py  labeler_app.py  labeler_utils.py  sf311_audit.py  sf311_eval.py  sf311_transform.py
sf311-priority/: .gitignore  Makefile  README.md  pyproject.toml
sf311-priority/scripts/: sf311_audit.py
supabase/: labels_table.sql
supabase/migrations/: 20250923000000_labels_table.sql  20250923001000_labels_add_confidence.sql  20250923002000_labels_add_outcome_fields.sql  20250923002100_labels_enable_delete_policy.sql  20251007090000_labels_add_reviewer_feedback.sql  20251007103000_labels_drop_legacy_flags.sql  20251013093000_annotator_queues.sql  20251013094500_labels_extend_outcomes.sql
tests/: test_annotator_cap.py  test_labeler_app_subset.py  test_labeler_utils.py  test_outcome_suggest.py  test_sf311_transform.py
