[project]
name = "311-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
