[project]
name = "311-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "Authlib>=1.3.2",
 "matplotlib>=3.10.6",
 "pandas>=2.3.2",
 "pyarrow>=21.0.0",
 "rich>=14.1.0",
 "streamlit>=1.49.1",
 "streamlit-shortcuts>=1.2.0",
 "supabase>=2.4.0",
 "watchdog>=6.0.0",
]

[dependency-groups]
dev = [ "black>=25.1.0", "pytest>=8.4.2", "ruff>=0.13.0",]
