[project]
name = "sf311-priority"
version = "0.1.0"
description = "SF311 homelessness feature engineering, HITL labeling, and evals"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "rich>=13.7.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "black>=24.2.0", "pytest>=8.0.0"]

[tool.uv]
